--- a/shopping-lists/Dockerfile
+++ b/shopping-lists/Dockerfile
@@ -2,9 +2,11 @@ FROM denoland/deno:alpine-1.29.2
 
 EXPOSE 7777
 
-WORKDIR /app
+WORKDIR /shopping-lists
 
 COPY deps.js .
+
+COPY /shopping-lists .
 
 RUN deno cache deps.js
 
